# Scholarship-Pipeline

./: .gitignore  README.md  main.py  pyproject.toml  region_selector_web.py
scholarship_pipeline/: __init__.py  config.py  io_utils.py  ocr.py  pipeline.py  postprocess.py  preprocessing.py
test_inputs/: README.md  bundles.csv
test_inputs/applicant_bundle_2_page/: README.md  jpeg_pairs.csv  manifest.csv  run_settings.csv
test_inputs/applicant_bundle_2_page/applications/scholarship_form/: README.md
test_inputs/applicant_bundle_2_page/expected/: README.md  expected_answers.csv  expected_answers_sample_1.csv  expected_answers_sample_2.csv
test_inputs/applicant_bundle_2_page/jpeg_samples/: README.md
test_inputs/applicant_bundle_5_page/: README.md  manifest.csv
test_inputs/applicant_bundle_5_page/optional_attachments/: README.md
test_inputs/applicant_bundle_5_page/shared_attachments/: README.md
test_outputs/: jpeg_pair_benchmark_results_warp_off.csv  jpeg_pair_benchmark_results_warp_on.csv  jpeg_pair_diff_report.csv  jpeg_pair_parsed_rows.csv
tests/: run_jpeg_pair_benchmark.py  run_jpeg_pair_diff_report.py  test_bundle_2_expected_answers.py  test_io_utils.py  test_ocr_page_routing.py  test_pipeline_pdf_aggregation.py  test_postprocess.py  test_preprocessing_contour.py  test_test_inputs_structure.py
